// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders reliably 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  disableBuiltInState={true}
  fillColor="#74AC00"
  focusable={true}
  iconComponent={null}
  iconStyle={
    {
      "borderRadius": 6,
    }
  }
  innerIconStyle={
    {
      "borderColor": "#454545",
      "borderRadius": 6,
      "borderWidth": 2,
    }
  }
  isChecked={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={25}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  textComponent={
    <ForwardRef
      className="ml-3 flex-shrink"
      component={[Function]}
    >
      Checkmark text
    </ForwardRef>
  }
  unfillColor="#ffffff"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "height": 25,
        "justifyContent": "center",
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 25,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderColor": "#74AC00",
            "borderRadius": 12.5,
            "borderWidth": 1,
            "height": 25,
            "justifyContent": "center",
            "width": 25,
          },
          {
            "borderColor": "#454545",
            "borderRadius": 6,
            "borderWidth": 2,
          },
        ]
      }
    />
  </View>
  <Text
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 15,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Regular",
            },
            [
              {
                "marginLeft": 12,
              },
              {
                "flexShrink": 1,
              },
            ],
          ],
        ],
      ]
    }
  >
    Checkmark text
  </Text>
</View>
`;

exports[`Checkbox renders reliably being checked 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  disableBuiltInState={true}
  fillColor="#74AC00"
  focusable={true}
  iconComponent={
    <INatIcon
      color="#ffffff"
      name="checkmark"
      size={19}
    />
  }
  iconStyle={
    {
      "borderRadius": 6,
    }
  }
  innerIconStyle={
    {
      "borderColor": "#74AC00",
      "borderRadius": 6,
      "borderWidth": 2,
    }
  }
  isChecked={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={25}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  textComponent={
    <ForwardRef
      className="ml-3 flex-shrink"
      component={[Function]}
    >
      Checkmark text
    </ForwardRef>
  }
  unfillColor="#ffffff"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#74AC00",
        "borderRadius": 6,
        "height": 25,
        "justifyContent": "center",
        "transform": [
          {
            "scale": 1,
          },
        ],
        "width": 25,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderColor": "#74AC00",
            "borderRadius": 12.5,
            "borderWidth": 1,
            "height": 25,
            "justifyContent": "center",
            "width": 25,
          },
          {
            "borderColor": "#74AC00",
            "borderRadius": 6,
            "borderWidth": 2,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#ffffff",
              "fontSize": 19,
            },
            null,
            {
              "fontFamily": "INatIcon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "color": "#454545",
        },
        {
          "fontFamily": "Lato-Regular",
        },
        [
          {
            "textAlign": "left",
          },
          [
            {
              "fontSize": 15,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Lato-Regular",
            },
            [
              {
                "marginLeft": 12,
              },
              {
                "flexShrink": 1,
              },
            ],
          ],
        ],
      ]
    }
  >
    Checkmark text
  </Text>
</View>
`;
